find_package(SystemC QUIET)
find_package(Threads REQUIRED)
include_directories(${SystemC_INCLUDE_DIR} ${metaSMT_INCLUDE_DIR})

add_executable(ALU4_experimental ALU4.cpp)
target_link_libraries(ALU4_experimental crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY} ${GLOG_LIBRARY})
add_executable(ALU12_experimental ALU12.cpp)
target_link_libraries(ALU12_experimental crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY} ${GLOG_LIBRARY})
add_executable(ALU16_experimental ALU16.cpp)
target_link_libraries(ALU16_experimental crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY} ${GLOG_LIBRARY})
add_executable(ALU24_experimental ALU24.cpp)
target_link_libraries(ALU24_experimental crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY} ${GLOG_LIBRARY})
add_executable(ALU32_experimental ALU32.cpp)
target_link_libraries(ALU32_experimental crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY} ${GLOG_LIBRARY})